<resources>
    <string name="app_name">OmmaFood</string>

    <string name="connection">Connexion</string>
    <string name="index">Chez nous celui qui a faim est notre client</string>
    <string name="des">Chez nous celui qui a faim est notre client</string>
    <string name="desEl">La nourriture est la vie Prière de ne pas la gaspiller</string>

    <string name="esmt">Bonjour c est un test </string>
    <string name="login">Identifiant</string>
    <string name="password">Mot de passe</string>
    <string name="confPassword">Confirme mot de passe</string>
    <string name="connect">Se connecter</string>
    <string name="sign_up">s\'inscrire</string>
    <string name="email">khadidia8@gmail.com</string>
    <string name="meal">Repas du jour</string>
    <string name="commande">Commandes</string>
    <string name="events">Evènements</string>
    <string name="restaurant">Restaurants</string>//googlemap
    <string name="help">Aide</string>
    <string name="inscription">Inscription</string>
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom</string>
    <string name="degrees">Diplomes</string>
    <string name="o_level">Bac</string>
    <string name="bachelor">Licence</string>
    <string name="master">Master</string>
    <string name="save">Enregistrer</string>
    <string name="cancel">Annuler</string>
    <string name="error_field">Veuillez remplir les champs</string>
    <string name="error_connection">Veuillez vérifier votre connexion</string>
    <string name="error_parameters">Paramètres incorrectes</string>
    <string name="error_inscription">Inscription échouée</string>
    <string name="success_inscription">Inscription réussie</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_index">IndexActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_fpage">FPageActivity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_admin">AdminActivity</string>
</resources>