<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="#00ffff"
    tools:context=".InscriptionActivity"
    tools:ignore="MissingDefaultResource">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inscription"
        android:textColor="@color/purple_700"
        android:textSize="50dp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"/>
    <EditText
        android:id="@+id/txtLogin"
        android:layout_marginTop="@dimen/top"
        android:hint="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:inputType="textPassword"
        android:id="@+id/txtPassword"
        android:layout_marginTop="@dimen/top"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:inputType="textPassword"
        android:id="@+id/txtConfPassword"
        android:layout_marginTop="@dimen/top"
        android:hint="@string/confPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btnSigUp"
        android:backgroundTint="@color/purple_700"
        android:layout_marginRight="@dimen/right"
        android:layout_marginLeft="@dimen/left"
        android:layout_marginTop="@dimen/top"
        android:text="@string/sign_up"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>


</LinearLayout>

